--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>libCluster</groupId>
     <artifactId>libCluster</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>15.0</version>
+    </dependency>
+</dependencies>
     
 </project>
