--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>mtj</artifactId>
             <version>0.9.14</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+        </dependency>
     </dependencies>
 </project>
